removed 2021 copy from <a> descriptions

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -28,10 +28,10 @@
         <div class="skillcrush-projects">
             <h2>2021 Skillcrush projects</h2>
             <ul>
-                <li>Developer portfolio site: 2021 version</li>
-                <li><a href="skillcrush/rogue-pickings-2021/index.html" target="_blank">Fresh food truck</a> 2021 version</li>
-                <li><a href="skillcrush/vision-board-project/index.html" target="_blank">Vision Board</a> 2021 version</li>
-                <li>Recipe Cards: 2021 version</li>
+                <li>Developer portfolio site</li>
+                <li><a href="skillcrush/rogue-pickings-2021/index.html" target="_blank">Fresh food truck</a></li>
+                <li><a href="skillcrush/vision-board-project/index.html" target="_blank">Vision Board</a></li>
+                <li>Recipe Cards</li>
             </ul>
         </div>
 
