split <h1> into subheading

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -11,7 +11,8 @@
     
     <body class="baby-coding-bunny">
         <img src="images/baby-coding-bunny-700px.png" width="40%">
-        <h1>baby coding bunny projects (Skillcrush archive)</h1>
+        <h1>baby coding bunny projects</h1>
+        <h2>Skillcrush projects archive</h2>
         
         <div class="skillcrush-projects">
         <h2>Simple 1-page websites</h2>
@@ -35,7 +36,7 @@
             </ul>
         </div>
 
-        <h1>elder bunny coding projects</h1>
+        <h1>elder bunny projects</h1>
         <div class="skillcrush-projects">
             <h2>Multi-page responsive websites</h2>
                 <ul>
