--- a/skillcrush.html
+++ b/skillcrush.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
         <div class="skillcrush-projects">
-            <h2>2021 Skillcrush projects</h2>
+            <h2>Simple 1-page websites (2021)</h2>
             <ul>
                 <li>Developer portfolio site</li>
                 <li><a href="skillcrush/rogue-pickings-2021/index.html" target="_blank">Fresh food truck</a></li>
