--- a/freecodecamp/tribute-page/index.html
+++ b/freecodecamp/tribute-page/index.html
@@ -14,10 +14,19 @@
     <body>
 	<header>
 		<h1>Grace White Sherwood</h1>
-
-        <!--For NAV remember to add that smooth scrolling CSS styling from accessibility lesson -->
-		<nav></nav>
+		<h2>In the 1700's, it was just easier to call her a witch.</h2>
 	</header>
+
+	<div class="TBD"><!-- Image Class? -->
+		<img src="woman-silhouette.jpg" alt="Silhouette of woman standing on beach">
+		<!-- Image caption? -->
+	</div>
+
+	<div class="TBD"><!-- Div Class? -->
+		<h2>She was know as the “Witch of Pungo” - because crops and livestock never, ever, die on their own. Like, ever.</h2>
+			<p>Grace White Sherwood (1660-1740), was the last person known to have been convicted of witchcraft in Virginia.</p><br>
+			<p>A farmer, healer, and midwife, she was accused by her neighbors of transforming herself into a cat, damaging crops, and causing the death of livestock.</p>
+	</div>
 </body>
 
 </html>
