quick <img> to 50%

--- a/freecodecamp/tribute-page/index.html
+++ b/freecodecamp/tribute-page/index.html
@@ -18,7 +18,7 @@
 	</header>
 
 	<div class="TBD"><!-- Image Class? -->
-		<img src="woman-silhouette.jpg" alt="Silhouette of woman standing on beach">
+		<img src="woman-silhouette.jpg" alt="Silhouette of woman standing on beach" width="50%">
 		<!-- Image caption? -->
 	</div>
 
