changed <h3> size to 2em

--- a/freecodecamp/tribute-page/index.html
+++ b/freecodecamp/tribute-page/index.html
@@ -26,6 +26,16 @@
 		<h3>She was know as the “Witch of Pungo” - because crops and livestock never, ever, die on their own. Like, ever.</h3>
 			<p>Grace White Sherwood (1660-1740), was the last person known to have been convicted of witchcraft in Virginia.</p><br>
 			<p>A farmer, healer, and midwife, she was accused by her neighbors of transforming herself into a cat, damaging crops, and causing the death of livestock.</p>
+		<h3>She was charged with witchcraft repeatedly…because she was surrounded by frickin' idiots.</h3>
+		<p>1697 - She was accused of casting a spell on a bull. A man named Richard Capps alleged that she had used a spell to cause the death of his bull. The court made no decision, and the Sherwoods filed a defamation suit against Capps that was resolved by a settlement.</p>
+
+		<p>1698 - She was accused of witchcraft by two neighbors; she supposedly bewitched the hogs and cotton crop of one of them. Sherwood sued for slander after each accusation, but her lawsuits were unsuccessful and her husband had to pay court costs.</p>
+
+		<p>1698, again. - A woman named Elizabeth Barnes alleged that Sherwood had assumed the form of a black cat, entered Barnes' home, jumped over her bed, drove and whipped her, and left via the keyhole. Yep. Again the allegation was unresolved, and again the subsequent defamation action was lost. For each of the failed actions, Sherwood and her husband had to pay court-related costs.</p>
+
+		<h3>She was a wife and mother.</h3>
+		1680 - Sherwood lived in Pungo, Princess Anne County (today part of Virginia Beach), and married James Sherwood, a planter. The couple went on to have three sons: John, James, and Richard.
+
 	</div>
 </body>
 
