added copy for <h3> and <p> content

--- a/freecodecamp/tribute-page/index.html
+++ b/freecodecamp/tribute-page/index.html
@@ -26,6 +26,7 @@
 		<h3>She was know as the “Witch of Pungo” - because crops and livestock never, ever, die on their own. Like, ever.</h3>
 			<p>Grace White Sherwood (1660-1740), was the last person known to have been convicted of witchcraft in Virginia.</p><br>
 			<p>A farmer, healer, and midwife, she was accused by her neighbors of transforming herself into a cat, damaging crops, and causing the death of livestock.</p>
+
 		<h3>She was charged with witchcraft repeatedly…because she was surrounded by frickin' idiots.</h3>
 		<p>1697 - She was accused of casting a spell on a bull. A man named Richard Capps alleged that she had used a spell to cause the death of his bull. The court made no decision, and the Sherwoods filed a defamation suit against Capps that was resolved by a settlement.</p>
 
@@ -34,7 +35,40 @@
 		<p>1698, again. - A woman named Elizabeth Barnes alleged that Sherwood had assumed the form of a black cat, entered Barnes' home, jumped over her bed, drove and whipped her, and left via the keyhole. Yep. Again the allegation was unresolved, and again the subsequent defamation action was lost. For each of the failed actions, Sherwood and her husband had to pay court-related costs.</p>
 
 		<h3>She was a wife and mother.</h3>
-		1680 - Sherwood lived in Pungo, Princess Anne County (today part of Virginia Beach), and married James Sherwood, a planter. The couple went on to have three sons: John, James, and Richard.
+			<p>1680 - Sherwood lived in Pungo, Princess Anne County (today part of Virginia Beach), and married James Sherwood, a planter. The couple went on to have three sons: John, James, and Richard.</p>
+
+		<h3>But she could throw down, too, apparently.</h3>
+			<p>1705 - Sherwood was involved in a fight with her neighbor, Elizabeth Hill. Sherwood sued Hill and her husband for assault and battery, and on December 7, 1705, was awarded damages of twenty shillings (one pound sterling).</p>
+
+		<h3>Things really go sideways.</h3>
+			<p>1706 - The Hills (yes, the ones from the 1705 fight) accused Grace Sherwood of witchcraft. She failed to answer the charge in court, and on February 7, 1706, the court ordered her to appear on a charge of having bewitched Elizabeth Hill, causing a miscarriage.</p>
+			<p>In March 1706 the Princess Anne County justices sought to impanel two juries, both made up of women. The first was ordered to search Sherwood's home for waxen or baked figures that might indicate she was a witch. The second was ordered to look for "demon suckling teats" by examining her.</p> <p>YES, YOU READ THAT CORRECTLY.</p>
+			<p>In both instances, reluctance on the part of the local residents made it difficult to form a jury and both juries refused to carry out the searches. This is where it should have ended. But it did not.</p>
+			<h3>The forewoman of the jury had ALREADY previously accused her of witchcraft.</h3>
+			<p>On March 7, 1706, Sherwood was examined by a jury of 12 "ancient and knowing women" (?) appointed to look for markings on her body that might be brands of the Devil. They discovered two "marks not like theirs or like those of any other woman". (??) The forewoman of this jury was the same Elizabeth Barnes who had previously accused Sherwood of witchcraft. YUP.</p>
+		<h3>A trial by ordeal, Virginia-style.</h3>
+			<p>1706 - The justices ordered a trial by ducking to take place, with Sherwood's consent, (allegedly???) but heavy rains caused a postponement until July 10, as they feared the wet weather might harm her health. (Because her health was suddenly a priority?) Sherwood was taken inside Lynnhaven Parish Church, placed on a stool and ordered to ask for forgiveness for her witchery. She replied,</p>
+
+	<h1>"I be not a witch, I be a healer."</h1>
+
+			<p>The court ordered that Sherwood's guilt or innocence be determined by ducking her in water. If she sank, she was innocent; if she did not, she was guilty. Sherwood was taken down a dirt lane now known as Witchduck Road, to a plantation near the mouth of the Lynnhaven River. News had spread, and the event attracted people from all over the colony, who began to shout "Duck the witch!" Because people have apparently always sucked.</p>
+			<p>Five women of Lynnhaven Parish Church examined Sherwood's naked body on the shoreline for any devices she might have to free herself, and then covered her with a sack. Six of the justices that had ordered the ducking rowed in one boat 200 yards (180 m) out in the river, and in another were the sheriff, the magistrate, and Sherwood.</p>
+			<p>Just before she was pushed off the boat Sherwood is said to have stated, under clear skies, "Before this day be through you will all get a worse ducking than I." Bound across the body—her right thumb to her left big toe and her left thumb to her right big toe - she was "cast into the river", and quickly floated to the surface.</p>
+	
+		<h3>The sheriff then tied a 13-pound (5.9 kg) Bible around her neck.</h3> 
+			<p>This caused her to sink, but she untied herself, and returned to the surface, convincing many spectators she was a witch.</p>
+			<p>As Sherwood was pulled out of the water a downpour reportedly started, drenching the onlookers. Several women who subsequently examined her for additional proof found "two things like titts on her private parts of a black coller [color]". (Whatever the hell that is?) She was jailed pending further proceedings.</p>
+		<h3>Aftermath</h3>
+			<p>What happened to Sherwood after her ducking (attempted drowning!?) is unclear as many court records have been lost. She served an unknown time in the jail next to Lynnhaven Parish Church, perhaps as long as seven years and nine months.</p>
+			<p>She was ordered to be detained "to be brought to a future trial", but no record of another trial exists, so it is possible the charge was dismissed at some point.</p>
+			<p>1708 - She was ordered to pay Christopher Cocke 600 pounds (270 kg) of tobacco for a reason not indicated in surviving records, but there is no mention of the payment.</p>
+			<p>1714 - Freed from prison, she recovered her property from Princess Anne County (her husband had died in 1701). She appears to have been released, since in that year she paid back taxes on her 145-acre property—which Virginia Lieutenant Governor Alexander Spotswood helped her to recover from Princess Anne County—on the banks of Muddy Creek off what is now Muddy Creek Road.</p>
+			<p>1740 - Sherwood never remarried, and lived on her farm until her death in 1740 at the age of about 80.</p>
+		<h3>Bittersweet…justice?</h3>
+			<p>2006 - On the 300th anniversary of Sherwood's conviction, Governor Tim Kaine granted an informal pardon to "officially restore [her] good name", recognizing that she was wrongfully convicted.</p>
+			<p>A statue depicting her was erected near Sentara Independence on Independence Boulevard in Virginia Beach, close to the site of the colonial courthouse where she was tried. She is sculpted alongside a raccoon, representing her love of animals, and carrying a basket containing garlic and rosemary, in recognition of her knowledge of herbal healing.</p>
+
+	<p>Information via Wikipedia: <a href="https://en.wikipedia.org/wiki/Grace_Sherwood"> Grace W. Sherwood</a></p>
 
 	</div>
 </body>
