removed <br> from <p>

--- a/freecodecamp/tribute-page/index.html
+++ b/freecodecamp/tribute-page/index.html
@@ -25,7 +25,7 @@
 	<div class="TBD"><!-- Div Class? -->
 		<h3>She was know as the “Witch of Pungo.”</h3> 
 		<h3>Because crops and livestock never, ever, die on their own. Like, ever.</h3>
-			<p>Grace White Sherwood (1660-1740), was the last person known to have been convicted of witchcraft in Virginia.</p><br>
+			<p>Grace White Sherwood (1660-1740), was the last person known to have been convicted of witchcraft in Virginia.</p>
 			<p>A farmer, healer, and midwife, she was accused by her neighbors of transforming herself into a cat, damaging crops, and causing the death of livestock.</p>
 
 		<h3>She was charged with witchcraft repeatedly…because she was surrounded by frickin' idiots.</h3>
