added <span> element for bold emphasis text

--- a/freecodecamp/tribute-page/index.html
+++ b/freecodecamp/tribute-page/index.html
@@ -26,30 +26,31 @@
 		<h3>She was know as the “Witch of Pungo.”</h3> 
 		<h3>Because crops and livestock never, ever, die on their own.</h3>
 		<h3>Like, ever.</h3>
-			<p>Grace White Sherwood (1660-1740), was the last person known to have been convicted of witchcraft in Virginia.</p>
+			<p>Grace White Sherwood <span class="bold-text">(1660-1740),</span> was the last person known to have been convicted of witchcraft in Virginia.</p>
 			<p>A farmer, healer, and midwife, she was accused by her neighbors of transforming herself into a cat, damaging crops, and causing the death of livestock.</p>
 
 		<h3>She was charged with witchcraft repeatedly…because she was surrounded by frickin' idiots.</h3>
-		<p>1697 - She was accused of casting a spell on a bull. A man named Richard Capps alleged that she had used a spell to cause the death of his bull. The court made no decision, and the Sherwoods filed a defamation suit against Capps that was resolved by a settlement.</p>
+		<p><span class="bold-text">1697</span> - She was accused of casting a spell on a bull. A man named Richard Capps alleged that she had used a spell to cause the death of his bull. The court made no decision, and the Sherwoods filed a defamation suit against Capps that was resolved by a settlement.</p>
 
-		<p>1698 - She was accused of witchcraft by two neighbors; she supposedly bewitched the hogs and cotton crop of one of them. Sherwood sued for slander after each accusation, but her lawsuits were unsuccessful and her husband had to pay court costs.</p>
+		<p><span class="bold-text">1698</span> - She was accused of witchcraft by two neighbors; she supposedly bewitched the hogs and cotton crop of one of them. Sherwood sued for slander after each accusation, but her lawsuits were unsuccessful and her husband had to pay court costs.</p>
 
-		<p>1698, again. - A woman named Elizabeth Barnes alleged that Sherwood had assumed the form of a black cat, entered Barnes' home, jumped over her bed, drove and whipped her, and left via the keyhole. Yep. Again the allegation was unresolved, and again the subsequent defamation action was lost. For each of the failed actions, Sherwood and her husband had to pay court-related costs.</p>
+		<p><span class="bold-text">1698, again.</span> - A woman named Elizabeth Barnes alleged that Sherwood had assumed the form of a black cat, entered Barnes' home, jumped over her bed, drove and whipped her, and left via the keyhole. Yep. Again the allegation was unresolved, and again the subsequent defamation action was lost. For each of the failed actions, Sherwood and her husband had to pay court-related costs.</p>
 
 		<h3>She was a wife and mother.</h3>
-			<p>1680 - Sherwood lived in Pungo, Princess Anne County (today part of Virginia Beach), and married James Sherwood, a planter. The couple went on to have three sons: John, James, and Richard.</p>
+			<p><span class="bold-text">1680</span> - Sherwood lived in Pungo, Princess Anne County (today part of Virginia Beach), and married James Sherwood, a planter. The couple went on to have three sons: John, James, and Richard.</p>
 
 		<h3>But she could throw down, too, apparently.</h3>
-			<p>1705 - Sherwood was involved in a fight with her neighbor, Elizabeth Hill. Sherwood sued Hill and her husband for assault and battery, and on December 7, 1705, was awarded damages of twenty shillings (one pound sterling).</p>
+			<p><span class="bold-text">1705</span> - Sherwood was involved in a fight with her neighbor, Elizabeth Hill. Sherwood sued Hill and her husband for assault and battery, and on December 7, 1705, was awarded damages of twenty shillings (one pound sterling).</p>
 
 		<h3>Things really go sideways.</h3>
-			<p>1706 - The Hills (yes, the ones from the 1705 fight) accused Grace Sherwood of witchcraft. She failed to answer the charge in court, and on February 7, 1706, the court ordered her to appear on a charge of having bewitched Elizabeth Hill, causing a miscarriage.</p>
-			<p>In March 1706 the Princess Anne County justices sought to impanel two juries, both made up of women. The first was ordered to search Sherwood's home for waxen or baked figures that might indicate she was a witch. The second was ordered to look for "demon suckling teats" by examining her.</p> <p>YES, YOU READ THAT CORRECTLY.</p>
+			<p><span class="bold-text">1706</span> - The Hills (yes, the ones from the <span class="bold-text">1705</span> fight) accused Grace Sherwood of witchcraft. She failed to answer the charge in court, and on February 7, 1706, the court ordered her to appear on a charge of having bewitched Elizabeth Hill, causing a miscarriage.</p>
+			<p>In March 1706 the Princess Anne County justices sought to impanel two juries, both made up of women. The first was ordered to search Sherwood's home for waxen or baked figures that might indicate she was a witch. The second was ordered to look for "demon suckling teats" by examining her.</p> <p><span class="bold-text">YES, YOU READ THAT CORRECTLY.</span></p>
 			<p>In both instances, reluctance on the part of the local residents made it difficult to form a jury and both juries refused to carry out the searches. This is where it should have ended. But it did not.</p>
 			<h3>The forewoman of the jury had ALREADY previously accused her of witchcraft.</h3>
-			<p>On March 7, 1706, Sherwood was examined by a jury of 12 "ancient and knowing women" (?) appointed to look for markings on her body that might be brands of the Devil. They discovered two "marks not like theirs or like those of any other woman". (??) The forewoman of this jury was the same Elizabeth Barnes who had previously accused Sherwood of witchcraft. YUP.</p>
+			<p>On <span class="bold-text">March 7, 1706</span>, Sherwood was examined by a jury of 12 "ancient and knowing women" (?) appointed to look for markings on her body that might be brands of the Devil. They discovered two "marks not like theirs or like those of any other woman". (??) The forewoman of this jury was the same Elizabeth Barnes who had previously accused Sherwood of witchcraft. YUP.</p>
+
 		<h3>A trial by ordeal, Virginia-style.</h3>
-			<p>1706 - The justices ordered a trial by ducking to take place, with Sherwood's consent, (allegedly???) but heavy rains caused a postponement until July 10, as they feared the wet weather might harm her health. (Because her health was suddenly a priority?) Sherwood was taken inside Lynnhaven Parish Church, placed on a stool and ordered to ask for forgiveness for her witchery. She replied,</p>
+			<p><span class="bold-text">1706</span> - The justices ordered a trial by ducking to take place, with Sherwood's consent, (allegedly???) but heavy rains caused a postponement until July 10, as they feared the wet weather might harm her health. (Because her health was suddenly a priority?) Sherwood was taken inside Lynnhaven Parish Church, placed on a stool and ordered to ask for forgiveness for her witchery. She replied,</p>
 
 	<h1>"I be not a witch, I be a healer."</h1>
 
@@ -63,11 +64,11 @@
 		<h3>Aftermath</h3>
 			<p>What happened to Sherwood after her ducking (attempted drowning!?) is unclear as many court records have been lost. She served an unknown time in the jail next to Lynnhaven Parish Church, perhaps as long as seven years and nine months.</p>
 			<p>She was ordered to be detained "to be brought to a future trial", but no record of another trial exists, so it is possible the charge was dismissed at some point.</p>
-			<p>1708 - She was ordered to pay Christopher Cocke 600 pounds (270 kg) of tobacco for a reason not indicated in surviving records, but there is no mention of the payment.</p>
-			<p>1714 - Freed from prison, she recovered her property from Princess Anne County (her husband had died in 1701). She appears to have been released, since in that year she paid back taxes on her 145-acre property—which Virginia Lieutenant Governor Alexander Spotswood helped her to recover from Princess Anne County—on the banks of Muddy Creek off what is now Muddy Creek Road.</p>
-			<p>1740 - Sherwood never remarried, and lived on her farm until her death in 1740 at the age of about 80.</p>
+			<p><span class="bold-text">1708</span> - She was ordered to pay Christopher Cocke 600 pounds (270 kg) of tobacco for a reason not indicated in surviving records, but there is no mention of the payment.</p>
+			<p><span class="bold-text">1714</span> - Freed from prison, she recovered her property from Princess Anne County (her husband had died in 1701). She appears to have been released, since in that year she paid back taxes on her 145-acre property—which Virginia Lieutenant Governor Alexander Spotswood helped her to recover from Princess Anne County—on the banks of Muddy Creek off what is now Muddy Creek Road.</p>
+			<p><span class="bold-text">1740</span> - Sherwood never remarried, and lived on her farm until her death in 1740 at the age of about 80.</p>
 		<h3>Bittersweet…justice?</h3>
-			<p>2006 - On the 300th anniversary of Sherwood's conviction, Governor Tim Kaine granted an informal pardon to "officially restore [her] good name", recognizing that she was wrongfully convicted.</p>
+			<p><span class="bold-text">2006</span> - On the 300th anniversary of Sherwood's conviction, Governor Tim Kaine granted an informal pardon to "officially restore [her] good name", recognizing that she was wrongfully convicted.</p>
 			<p>A statue depicting her was erected near Sentara Independence on Independence Boulevard in Virginia Beach, close to the site of the colonial courthouse where she was tried. She is sculpted alongside a raccoon, representing her love of animals, and carrying a basket containing garlic and rosemary, in recognition of her knowledge of herbal healing.</p>
 
 	<p>Information via Wikipedia: <a href="https://en.wikipedia.org/wiki/Grace_Sherwood"> Grace W. Sherwood</a></p>
