--- a/freecodecamp/tribute-page/index.html
+++ b/freecodecamp/tribute-page/index.html
@@ -14,7 +14,7 @@
     <body>
 	<header>
 		<h1>Grace White Sherwood</h1>
-		<h2>In the 1700's, it was just easier to call her a witch.</h2>
+		<h2>In the 1700's...it was just easier to call her a witch.</h2>
 	</header>
 
 	<div class="TBD"><!-- Image Class? -->
