added <main> element

--- a/freecodecamp/tribute-page/index.html
+++ b/freecodecamp/tribute-page/index.html
@@ -17,7 +17,7 @@
 		<h2>In the 1700's...it was just easier to call her a witch.</h2>
 	</header>
 
-	<div class="TBD"><!-- Image Class? -->
+	<main id="main">
 		<img src="woman-silhouette.jpg" alt="Silhouette of woman standing on beach" width="50%">
 		<!-- Image caption? -->
 	</div>
@@ -74,6 +74,7 @@
 	<p>Information via Wikipedia: <a href="https://en.wikipedia.org/wiki/Grace_Sherwood"> Grace W. Sherwood</a></p>
 
 	</div>
+</main>
 </body>
 
 </html>
