reconnected img URL

--- a/freecodecamp/tribute-page/index.html
+++ b/freecodecamp/tribute-page/index.html
@@ -16,7 +16,7 @@
 		<h1>Grace White Sherwood</h1>
 		<h2 id="tribute-info">In the 1700's, it was just easier to call her a witch.</h2>
 		<figure id="img-div">
-		  <img src="#" alt="Woman standing by the ocean" id="image">
+		  <img src="woman-silhouette.jpg" alt="Woman standing by the ocean" id="image">
 		  <figcaption id="img-caption">The silhouette of a woman standing by water.</figcaption>
 		</figure>
 	</header>
