--- a/freecodecamp/tribute-page/index.html
+++ b/freecodecamp/tribute-page/index.html
@@ -9,7 +9,7 @@
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=IM+Fell+English:ital@0;1&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Diphylleia&display=swap" rel="stylesheet">
 
 	<title id="title">Grace White Sherwood-Tribute Page</title>
 	</head>
