added styling to date 1st <p>

--- a/freecodecamp/tribute-page/index.html
+++ b/freecodecamp/tribute-page/index.html
@@ -25,8 +25,18 @@
 		  <figcaption id="img-caption">The silhouette of a woman standing by water.</figcaption>
 		</figure>
 	</header>
-		
+	
+	<div id="biography">
+	<h3>She was know as the “Witch of Pungo” - because crops and livestock never, ever, die on their own. Like, ever.</h3>
+	<p>Grace White Sherwood (1660-1740), was the last person known to have been convicted of witchcraft in Virginia. A farmer, healer, and midwife, she was accused by her neighbors of transforming herself into a cat, damaging crops, and causing the death of livestock. </p>
+
+	<h3>She was charged with witchcraft repeatedly…because she was surrounded by frickin' <i>idiots.</i></h3>
+	<p><b>1697</b> - She was accused of casting a spell on a bull. A man named Richard Capps alleged that she had used a spell to cause the death of his bull. The court made no decision, and the Sherwoods filed a defamation suit against Capps that was resolved by a settlement.</p>
+
 	<a href="https://en.wikipedia.org/wiki/Grace_Sherwood" id="tribute-link" target="_blank">More information about Grace Sherwood's story on Wikipedia.</a>
+	</div>
+	</main>
+	
 
 	</main>
 </body>
