added FCC project 2 URL

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -17,7 +17,7 @@
                 <a href="freecodecamp/survey-form/index.html" target="_blank">
                 <img src="images/FCC-project-1-screenshot.png"></a>
             
-                <a href="#" target="_blank">
+                <a href="freecodecamp/tribute-page/index.html" target="_blank">
                 <img src="images/tribute-page-screenshot.png"></a>
 
                 <a href="#" target="_blank">
