--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>coding bunny visits freeCodeCamp</title>
-        <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon"><link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon">
+        <link rel="stylesheet" href="styles.css">
      
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
