--- a/freecodecamp/survey-form/index.html
+++ b/freecodecamp/survey-form/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>freeCodeCamp Survey Form</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon">
         <meta charset="UTF-8">
         <meta name="description" content="freeCodeCamp Survey Form">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
