set up new <div> for moving  footer info

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <h2>freecodecamp responsive web dev <a href="freecodecamp.html">projects</a></h2>
         <h2>Scrimba <a href="scrimba.html">exercises + notes [2023]</a></h2>
         <h2>Skillcrush refresher + Javascript course <a href="skillcrush.html">projects [2023]</a></h2>
+        
+    </div>
+    <div class="courses">
+        <h2>🐇 ABOUT ⚡️</h2>
+        <h2>✨ CREDITS ✨</h2>
     </div>
     <hr>
 </body>
