--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
     </div>
     <div class="courses">
-        <h2>🐇 ABOUT ⚡️</h2>
+        <h2>🐇 ABOUT PROJECT(S) ⚡️</h2>
         <h2>✨ CREDITS ✨</h2>
     </div>
     <hr>
