edited github URL copy

--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     </div>
     <div class="courses">
         <h2>🐇 ABOUT PROJECT(S) ⚡️</h2>
-        <h2>✨ CREDITS 🐰</h2>
-        <h2>👋 GITHUB 🕸️</h2>
+        <h2>🐰 CREDITS ✨</h2>
+        <h2>👋 vhf <a href="https://github.com/Victoria-Farr">GITHUB</a> 🕸️</h2>
     </div>
     <hr>
 </body>
 
 <footer>
     <ul>
-        <li>🪩 Victoria made this in 2023. <a href="https://github.com/Victoria-Farr">Her GitHub burrow.</a></li>
+        <li>🪩 Victoria made this in 2023. Her GitHub burrow.</a></li>
         <li>🖼️ images: <a href="https://www.pexels.com/@shvetsa/">Anna Shvets</a> + <a href="https://www.pexels.com/photo/rabbit-on-person-s-hands-6957670/">Mikhail Nilov</a></li>
         <li>🔠 type: <a href="https://fonts.google.com/specimen/Azeret+Mono?category=Monospace">Azeret Mono</a> via Google Fonts</li>
         <li>🐇 icons: <a href="https://icons8.com/">Icons8</a></p></li>
