--- a/about.html
+++ b/about.html
@@ -21,4 +21,18 @@
         <li>🐇 icons: <a href="https://icons8.com/">Icons8</a></p></li>
     </ul>
 </body>
+
+<footer>
+    <nav>
+        <ul>
+            <li><a href="index.html">The burrow</a></li>
+            <li><a href="freecodecamp.html">freeCodeCamp</a></li>
+            <li><a href="scrimba.html">Scrimba</a></li>
+            <li><a href="skillcrush.html">Skillcrush</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#">Credits</a></li>
+            <li><a href="index.html">GitHub</a></li>
+        </ul>
+    </nav>
+</footer>
 </html>
