--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
             <li><a href="scrimba.html">Scrimba</a></li>
             <li><a href="skillcrush.html">Skillcrush</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="#">Credits</a></li>
+            <li><a href="credits.html">Credits</a></li>
             <li><a href="index.html">GitHub</a></li>
         </ul>
     </nav>
