--- a/about.html
+++ b/about.html
@@ -6,13 +6,13 @@
 	<meta name="description" content="page description">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="styles.css">
-	<title>Page Title</title>
+	<title>About projects</title>
 	</head>
 
 	<body>
 		<script src="index.js"></script>
 	<header>
-		<h1>Page title</h1>
+		<h1>About this project(s)</h1>
 		<nav></nav>
 	</header>
     
