--- a/credits.html
+++ b/credits.html
@@ -25,6 +25,17 @@
     </ul>
 </body>
 
-<footer>    
+<footer>
+    <nav>
+        <ul>
+            <li><a href="index.html">The burrow</a></li>
+            <li><a href="freecodecamp.html">freeCodeCamp</a></li>
+            <li><a href="scrimba.html">Scrimba</a></li>
+            <li><a href="skillcrush.html">Skillcrush</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="credits.html">Credits</a></li>
+            <li><a href="index.html">GitHub</a></li>
+        </ul>
+    </nav>
 </footer>
 </html>
