--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -34,8 +34,19 @@
         <hr>
         <p><a href="freecodecamp/CSS-cursor-fun.html">CSS Cursor Property Test Page</a></p>
     </body>
+   
     <footer>
-        <a class="back-button" href="index.html">back to the burrow.</a>
+        <nav>
+            <ul>
+                <li><a href="index.html">The burrow</a></li>
+                <li><a href="freecodecamp.html">freeCodeCamp</a></li>
+                <li><a href="scrimba.html">Scrimba</a></li>
+                <li><a href="skillcrush.html">Skillcrush</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="credits.html">Credits</a></li>
+                <li><a href="index.html">GitHub</a></li>
+            </ul>
+        </nav>
     </footer>
 </html>
 
