updated GitHub URL in <nav>

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li><a href="skillcrush.html">Skillcrush</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="credits.html">Credits</a></li>
-            <li><a href="index.html">GitHub</a></li>
+            <li><a href="https://github.com/Victoria-Farr">GitHub</a></li>
         </ul>
     </nav>
 </footer>
