removed width shortcut for header img

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <img src="images/coding-bunny-sunglasses-700px.png" width="40%">
+    <img src="images/coding-bunny-sunglasses-700px.png">
     <h1>put the bunny back in the box (model)</h1>
     <div class="courses">
         <h2>freecodecamp responsive web dev <a href="freecodecamp.html">projects</a></h2>
@@ -22,7 +22,7 @@
     </div>
     <div class="courses">
         <h2>🐇 <a href="about.html">ABOUT PROJECT(S)</a> ⚡️</h2>
-        <h2>🐰 CREDITS ✨</h2>
+        <h2>🐰 <a href="credits.html">CREDITS</a> ✨</h2>
         <h2>👋 vhf <a href="https://github.com/Victoria-Farr">GITHUB</a> 🕸️</h2>
     </div>
     <hr>
