--- a/skillcrush.html
+++ b/skillcrush.html
@@ -10,7 +10,7 @@
     </head>
     
     <body class="baby-coding-bunny">
-        <img src="images/baby-coding-bunny-700px.png" width="40%">
+        <img src="images/baby-coding-bunny-700px.png">
         <h1>baby coding bunny projects</h1>
         <h2>Skillcrush projects archive</h2>
         
