added .about-page class

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -11,7 +11,7 @@
     </head>
     
     <body>
-        <img src="images/coding-bunny-sitting-700px.png" width="40%">
+        <img src="images/coding-bunny-sitting-700px.png">
         <h1><a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank">freecodecamp</a> responsive web dev certification projects.</h1>
 
             <div class="fcc-projects">
