--- a/about.html
+++ b/about.html
@@ -16,7 +16,8 @@
 	<body class="about-page">
 		<script src="index.js"></script>
 	<header>
-		<h1>About this project(s)</h1>
+        <img src="images/rabbit-purple-circle 3.png">
+		<h1>About projects</h1>
 		<nav></nav>
 	</header>
     
