--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
     </div>
     <div class="courses">
-        <h2>🐇 <a href="about.html">ABOUT PROJECT(S)</a> ⚡️</h2>
+        <h2>🐇 <a href="about.html">ABOUT PROJECTS</a> ⚡️</h2>
         <h2>🐰 <a href="credits.html">CREDITS</a> ✨</h2>
         <h2>👋 vhf <a href="https://github.com/Victoria-Farr">GITHUB</a> 🕸️</h2>
     </div>
