updated footer nav

--- a/credits.html
+++ b/credits.html
@@ -28,7 +28,7 @@
 <footer>
     <nav>
         <ul>
-            <li><a href="index.html">The burrow</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="freecodecamp.html">freeCodeCamp</a></li>
             <li><a href="scrimba.html">Scrimba</a></li>
             <li><a href="skillcrush.html">Skillcrush</a></li>
