edited Simple 1-page heading text

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -27,9 +27,9 @@
             </ul>
         </div>
         <div class="skillcrush-projects">
-            <h2>Simple 1-page websites (2021)</h2>
+            <h2>Simple 1-page websites (2021 archive)</h2>
             <ul>
-                <li>Developer portfolio site</li>
+                <li><a href="#">Developer portfolio site</a></li>
                 <li><a href="skillcrush/rogue-pickings-2021/index.html" target="_blank">Fresh food truck</a></li>
                 <li><a href="skillcrush/vision-board-project/index.html" target="_blank">Vision Board</a></li>
                 <li>Recipe Cards</li>
