added header-img div class

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -10,7 +10,9 @@
     </head>
     
     <body class="baby-coding-bunny">
+        <div class="header-img">
         <img src="images/baby-coding-bunny-700px.png">
+        </div>
         <h1>baby coding bunny projects</h1>
         <h2>Skillcrush projects archive</h2>
         
