added header-img class to all header images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <img src="images/coding-bunny-sunglasses-700px.png">
+    <img src="images/coding-bunny-sunglasses-700px.png" class="header-img">
     <h1>put the bunny back in the box (model)</h1>
     <div class="courses">
         <h2>freecodecamp responsive web dev <a href="freecodecamp.html">projects</a></h2>
