--- a/scrimba.html
+++ b/scrimba.html
@@ -10,7 +10,7 @@
 
     </head>
     <body>
-        <img src="images/coding-bunny-stands-700px.png">
+        <img src="images/coding-bunny-stands-700px.png" class="header-img">
         <h1>Scrimba exercise notes + projects</h1>
             <ul>
                 <li>
