--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 	<body class="about-page">
 		<script src="index.js"></script>
 	<header>
-        <img src="images/rabbit-purple-circle 3.png">
+        <img src="images/rabbit-purple-circle 3.png" class="header-img">
 		<h1>About projects</h1>
 		<p>Pokem ipsum dolor sit amet Bayleef Heatmor Ferrothorn Drilbur Magneton Shellos. Hydro Pump Houndour Wing Attack Fog Badge Paras Slowbro Magneton. Ut aliquip ex ea commodo consequat Scrafty Dewgong Palkia Torterra Meditite et dolore magna aliqua. Glacier Badge gotta catch 'em all Weepinbell Grovyle Cottonee Genesect Viridian City. Fire Red to protect the world from devastation Simisear Gallade Cobalion Grotle Tepig.</p>
 	</header>
