added recipe cards project URL to skillcrush page

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -31,10 +31,10 @@
         <div class="skillcrush-projects">
             <h2>Simple 1-page websites (2021 archive)</h2>
             <ul>
-                <li><a href="#">Developer portfolio site</a></li>
+                <li><a href="skillcrush/jubilee-site/index.html" target="_blank">Developer portfolio site</a></li>
                 <li><a href="skillcrush/rogue-pickings-2021/index.html" target="_blank">Fresh food truck</a></li>
                 <li><a href="skillcrush/vision-board-project/index.html" target="_blank">Vision Board</a></li>
-                <li>Recipe Cards</li>
+                <li><a href="skillcrush/recipe-card-site/index.html" target="_blank">Recipe Cards</a></li>
             </ul>
         </div>
 
