created skillcrush archive projects <div>

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -28,6 +28,7 @@
                 <li>Recipe Cards</li>
             </ul>
         </div>
+
         <div class="skillcrush-projects">
             <h2>Simple 1-page websites (2021 archive)</h2>
             <ul>
@@ -36,6 +37,10 @@
                 <li><a href="skillcrush/vision-board-project/index.html" target="_blank">Vision Board</a></li>
                 <li><a href="skillcrush/recipe-card-site/index.html" target="_blank">Recipe Cards</a></li>
             </ul>
+        </div>
+
+        <div class="skillcrush-archive-projects">
+            
         </div>
 
         <h1>elder bunny projects</h1>
