added archive skillcrush project screenshots

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="skillcrush-archive-projects">
-            
+            <img src=""
         </div>
 
         <h1>elder bunny projects</h1>
