added archive project thumbnails and URLs

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -29,18 +29,21 @@
             </ul>
         </div>
 
-        <div class="skillcrush-projects">
-            <h2>Simple 1-page websites (2021 archive)</h2>
-            <ul>
-                <li><a href="skillcrush/jubilee-site/index.html" target="_blank">Developer portfolio site</a></li>
-                <li><a href="skillcrush/rogue-pickings-2021/index.html" target="_blank">Fresh food truck</a></li>
-                <li><a href="skillcrush/vision-board-project/index.html" target="_blank">Vision Board</a></li>
-                <li><a href="skillcrush/recipe-card-site/index.html" target="_blank">Recipe Cards</a></li>
-            </ul>
-        </div>
-
         <div class="skillcrush-archive-projects">
-            <img src=""
+            <h2>Simple 1-page websites (2021 archive)</h2>
+
+            <a href="skillcrush/rogue-pickings-2021/index.html" target="_blank">
+            <img src="skillcrush/skillcrush-project-screenshots/rogue-2021-screenshot.png"></a>
+
+            <a href="skillcrush/jubilee-site/index.html" target="_blank">
+            <img src="skillcrush/skillcrush-project-screenshots/jubilee-2021-screenshot.png"></a>
+
+            <a href="skillcrush/recipe-card-site/index.html" target="_blank">
+            <img src="skillcrush/skillcrush-project-screenshots/recipe-2021-screenshot.png"></a>
+
+            <a href="skillcrush/vision-board-project/index.html" target="_blank">
+            <img src="skillcrush/skillcrush-project-screenshots/vision-2021-screenshot.png"></a>
+            
         </div>
 
         <h1>elder bunny projects</h1>
