added <figure> tag for archive project thumbnails

--- a/skillcrush.html
+++ b/skillcrush.html
@@ -31,19 +31,25 @@
 
         <h2>Simple 1-page websites (2021 archive)</h2>
         <div class="skillcrush-archive-projects">
-
+            <figure>
             <a href="skillcrush/rogue-pickings-2021/index.html" target="_blank">
             <img src="skillcrush/skillcrush-project-screenshots/rogue-2021-screenshot.png"></a>
+            </figure>
 
+            <figure>
             <a href="skillcrush/jubilee-site/index.html" target="_blank">
             <img src="skillcrush/skillcrush-project-screenshots/jubilee-2021-screenshot.png"></a>
+            </figure>
 
+            <figure>
             <a href="skillcrush/recipe-card-site/index.html" target="_blank">
             <img src="skillcrush/skillcrush-project-screenshots/recipe-2021-screenshot.png"></a>
+            </figure>
 
+            <figure>
             <a href="skillcrush/vision-board-project/index.html" target="_blank">
             <img src="skillcrush/skillcrush-project-screenshots/vision-2021-screenshot.png"></a>
-            
+            </figure>
         </div>
 
         <h1>elder bunny projects</h1>
