--- a/skillcrush.html
+++ b/skillcrush.html
@@ -34,21 +34,25 @@
             <figure>
             <a href="skillcrush/rogue-pickings-2021/index.html" target="_blank" alt="rogue pickings project">
             <img src="skillcrush/skillcrush-project-screenshots/rogue-2021-screenshot.png"></a>
+            <figcaption>Rogue Pickings (2021)</figcaption>
             </figure>
 
             <figure>
             <a href="skillcrush/jubilee-site/index.html" target="_blank" alt="jubilee project">
             <img src="skillcrush/skillcrush-project-screenshots/jubilee-2021-screenshot.png"></a>
+            <figcaption>Jubilee Austen Portfolio (2021)</figcaption>
             </figure>
 
             <figure>
             <a href="skillcrush/recipe-card-site/index.html" target="_blank" alt="recipe cards project">
             <img src="skillcrush/skillcrush-project-screenshots/recipe-2021-screenshot.png"></a>
+            <figcaption>Recipe Cards Project (2021)</figcaption>
             </figure>
 
             <figure>
             <a href="skillcrush/vision-board-project/index.html" target="_blank" alt="vision board project">
             <img src="skillcrush/skillcrush-project-screenshots/vision-2021-screenshot.png"></a>
+            <figcaption>Vision Board Project (2021)</figcaption>
             </figure>
         </div>
 
